<resources>
    <string name="app_name">DimDimConverter</string>
    <string name="edtInforme">Type in the value to be converted </string>
    <string name="edtDolar">Dollar price (US$) to Real (R$)</string>
    <string name="edtEuro">Euro price (€) to Real (R$)</string>
    <string name="edtPeso">Peso price ($) to Real (R$)</string>
    <string name="btnAbout">About the app</string>
    <string name="btnConvert">Converts the value</string>
    <string name="msgVazio">Please inform all the rates, or fill with 0,00</string>
    <string name="rdDolar">US$</string>
    <string name="rdEuro">€</string>
    <string name="rdPeso">$</string>
    <string name="msgSelecionar">Select the desired conversion</string>
    <string name="btnLimpar">Clean fields</string>
    <string name="btnSair">Exit the app</string>
    <string name="dlgSair">Exit</string>
    <string name="msgSair">Do you really want to exit?</string>
    <string name="opSim">Yes</string>
    <string name="opNao">No</string>
    <string name="txtDesenvolvido">Academic Rômulo Augusto Oestreich Maciel Garcia</string>
    <string name="txtView">DimDimConverter is an app that converts currency</string>
    <string name="txtObjetivo">Android Programming - Computer Science - UNOESC 2016</string>
    <string name="txtProfessor">Teacher Roberson Junior Fernandes Alves</string>
</resources>
