<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="br.edu.pdm.dimdimconverter.AboutActivity"
    android:gravity="center_vertical"
    android:background="@color/highlighted_text_material_dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtDesenvolvido"
        android:id="@+id/txtDesenvolvido"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgLogo"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/money"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtView"
        android:id="@+id/txtPara"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtObjetivo"
        android:id="@+id/txtObjetivo"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtProfessor"
        android:id="@+id/txtProfessor"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSair"
        android:id="@+id/btnSair"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
